--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link rel=mask-icon href=https://liuchang0812.github.io/safari-pinned-tab.svg>
 <meta name=theme-color content="#2e2e33">
 <meta name=msapplication-TileColor content="#2e2e33">
-<meta name=generator content="Hugo 0.89.2">
+<meta name=generator content="Hugo 0.89.4">
 <link rel=alternate type=application/rss+xml href=https://liuchang0812.github.io/index.xml>
 <link rel=alternate type=application/json href=https://liuchang0812.github.io/index.json>
 <link rel=stylesheet href=https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css>
@@ -49,6 +49,18 @@
 </header>
 <main class=main>
 <article class=first-entry>
+<header class=entry-header>
+<h2>信号量为什么还需要一个额外的互斥锁保护
+</h2>
+</header>
+<section class=entry-content>
+<p>我们以 C++11 的 API 接口定义来描述
+大家在编写多线程类的程序时，会用到信号量 condition_variable，有没有疑惑过为什么 cv 这类接口，在调用 wait/notify 时候还需要用一个 mutex。</p>
+</section>
+<footer class=entry-footer><span title="2021-11-22 20:26:06 +0800 +0800">November 22, 2021</span></footer>
+<a class=entry-link aria-label="post link to 信号量为什么还需要一个额外的互斥锁保护" href=https://liuchang0812.github.io/posts/computescience/conv-mutex/></a>
+</article>
+<article class=post-entry>
 <header class=entry-header>
 <h2>Test Markdown2
 </h2>
